environments/local/istio/destinationrule-web-ui.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: web-ui
  namespace: saga
spec:
  host: web-ui.saga.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
