environments/local/istio/virtualservice-webui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: web-ui
  namespace: saga
spec:
  hosts:
    - "*"
  gateways:
    - saga-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: web-ui.saga.svc.cluster.local
            port:
              number: 8080
